Fix title on mobile + add model functionality

--- a/public/tokenizer.css
+++ b/public/tokenizer.css
@@ -13,6 +13,11 @@ body {
     background-color: #3c3c43;
   }
 }
+@media (max-width: 640px) {
+  h1 img {
+    display: none;
+  }
+}
 h1 {
   display: flex;
   justify-content: space-around;
